fix : step4 요구사항중 nio->io
nio를 사용하는 부분 제거 블로킹, 논블로킹 학습