@@ -1,7 +1,7 @@
 package utils;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -17,7 +17,13 @@ public class UserFormDataParser {
                 .map(it -> it.split("=", 2))
                 .collect(Collectors.toMap(
                         it -> it[0],
-                        it -> URLDecoder.decode(it.length > 1 ? it[1] : "", StandardCharsets.UTF_8),
+                        it -> {
+                            try {
+                                return URLDecoder.decode(it.length > 1 ? it[1] : "", "UTF-8");
+                            } catch (UnsupportedEncodingException e) {
+                                throw new RuntimeException(e);
+                            }
+                        },
                         (existing, replacement) -> existing
                 ));
     }
